# lets-get-rusty

./: README.md
collections/src/: main.rs
enums/src/: main.rs
error_handling/src/: main.rs
generics_traits_lifetimes/src/: main.rs
hashmap/src/: add_employess.rs  main.rs  median_and_mode.rs
ipfs-uploader/: .env  Cargo.toml  notes.txt
ipfs-uploader/src/: lib.rs  main.rs  utils.rs
ipfs-uploader/src/api/: data.rs  internal.rs  metadata.rs
iterators_closures/src/: main.rs
minigrep/: .env
minigrep/src/: lib.rs  main.rs
rectangles/src/: main.rs  method_syntax.rs
restaurant/src/: lib.rs
rust-in-action/src/: foo.txt  main.rs
sarufi-test/: Cargo.toml
sarufi-test/src/: main.rs
structs/src/: main.rs  test.json
