[package]
name = "ipfs-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.5"
bytes = "1.4.0"
dotenv = "0.15.0"
walkdir = "2.3.2"
failure = { version = "0.1.8" }
log = "0.4.14"
derive_builder = "0.10.2"